--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -39,9 +39,9 @@
             <ul class="mobile-nav">
                 <li class="active"><a href="/">Главная</a></li>
                 <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
-                <li><a href="#">Способы оплаты</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">О нас</a></li>
+                <li><a href="{% url 'allposts' %}">Статьи</a></li>
+                <li><a href="#reviews">Отзывы</a></li>
+                <li><a href="#about">О нас</a></li>
                  <li><a href="{% url 'contacts' %}">Контакты</a></li>
             </ul>
         </div>
@@ -51,9 +51,9 @@
         <ul class="nav">
             <li class="active"><a href="/">Главная</a></li>
             <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
-            <li><a href="#">Способы оплаты</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">О нас</a></li>
+            <li><a href="{% url 'allposts' %}">Статьи</a></li>
+            <li><a href="#reviews">Отзывы</a></li>
+            <li><a href="#about">О нас</a></li>
              <li><a href="{% url 'contacts' %}">Контакты</a></li>
         </ul>
         <a href="#callback_form" class="btn ">оформить заявку</a>
@@ -77,7 +77,7 @@
             <div>
                 <div class="header-feature header-feature-1">
                     <div class="header-feature-inner">
-                        <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
+                        <p>Вместе с выполненной работой, Вы получите <span>результат проверки её на анти-плагиат</span></p>
                     </div>
 
                 </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="header-feature header-feature-3">
                 <div class="header-feature-inner">
-                    <p class="text-block">Сопровождаем вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
+                    <p class="text-block">Сопровождаем Вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
                 </div>
 
             </div>
