--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }} - уауку
+    {{ block.super }}  - Контакты
 {% endblock %}
 
 {% block keywords %}
