--- a/templates/pages/prices.html
+++ b/templates/pages/prices.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }} - уауку
+    {{ block.super }} - Цены и услуги
 {% endblock %}
 
 {% block keywords %}
