--- a/templates/footer.html
+++ b/templates/footer.html
@@ -81,8 +81,8 @@
         xhr.open('POST', '/callback/workprice/', true);
         xhr.onload = function () {
             if (JSON.parse(this.response)['result'] === 'ok'){
-                btn.style.display = 'none'
-                div.style.display = 'block'
+                btn.firstChild.data = 'Спасибо за обращение, с Вами свяжутся'
+
             }
             else{
                 error_label.style.display = 'block'
