--- a/templates/pages/lk.html
+++ b/templates/pages/lk.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {{ block.super }} - уауку
+    {{ block.super }} - Личный кабинет
 {% endblock %}
 
 {% block keywords %}
@@ -219,19 +219,14 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <div class="select-wrapper">
-                                <select class="form-control" name="{{ orderForm.subject.name }}" required>
-                                    <option selected="selected"  value="">Предмет</option>
-                                    {% for subject in allSubjects %}
-                                        <option value="{{ subject.name }}">{{ subject.name }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
+                            <input class="form-control" value="" name="{{ orderForm.subject.name }}" placeholder="Предмет">
 
-                            <input class="form-control" value="" required name="{{ orderForm.about.name }}" placeholder="Тема работы">
+                            <input class="form-control" value="" name="{{ orderForm.about.name }}" placeholder="Тема работы">
                             <div class="d-flex-jc-sb">
-                                <input type="number" class="form-control form-control-sm " name="{{ orderForm.volume.name }}" required value="" placeholder="Объем">
-                                <input class="form-control form-control-sm " value="" name="{{ orderForm.deadLine.name }}" required placeholder="Срок">
+                                <input type="number" class="form-control form-control-sm " name="{{ orderForm.volume.name }}" value="" placeholder="Объем">
+                                <input class="form-control form-control-sm " value="" name="{{ orderForm.deadLine.name }}"
+                                       placeholder="Срок" type="date"
+                                       onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                             </div>
                             <input type="file" class="form-control form-control-lg" name="{{ orderForm.file.name }}">
 
