--- a/templates/callback_form.html
+++ b/templates/callback_form.html
@@ -18,7 +18,7 @@
                         <div class="d-flex-jc-sb">
                             <input type="number" class="form-control form-control-sm " name="{{ callbackForm.volume.name }}" value="" placeholder="Объем">
                             <input class="form-control form-control-sm " value="" name="{{ callbackForm.deadLine.name }}"
-                                   placeholder="Срок" type="date"
+                                   placeholder="Срок сдачи" type="date"
                                    onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                         </div>
                         <input type="file" class="form-control form-control-lg" name="{{ callbackForm.file.name }}">
